[project]
name = "almhult"
version = "0.1.0"
description = "Download IKEA 3D models and convert to OBJ for SweetHome3D"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27",
    "trimesh[easy]>=4.0",
]

[project.scripts]
almhult = "main:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["main"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
